@@ -85,6 +85,7 @@ require 'lobbyist/v2/company'
 require 'lobbyist/v2/contact'
 require 'lobbyist/v2/csv_upload'
 require 'lobbyist/v2/custom_invitation'
+require 'lobbyist/v2/customer_activity'
 require 'lobbyist/v2/customer_call_credit_metrics'
 require 'lobbyist/v2/customer_call_credit'
 require 'lobbyist/v2/customer_call_metrics'
