@@ -1,3 +1,5 @@
+* Added CustomerActivity proxy model for V2.
+
 === 0.5.12 2014-07-24
 
 * Added phone_ext attribute to Company proxy model for both V1 and V2.
